[package]
name = "block-devs"
description = "Safe portable wrapper for block device opperations"
version = "0.1.0"
authors = ["AJ Bagwell <anthony.bagwell@hivehome.com>"]
repository  = "https://github.com/aj-bagwell/block-devs"
license     = "MIT"
categories  = ["os::unix-apis"]
edition = "2018"

[package.metadata.docs.rs]
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "x86_64-unknown-freebsd",
]

[dependencies]
nix = "0.19"